--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+
+
+data/
+!data/metadata.json
+
+
+#######################################################################
+
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
